--- a/counseling/Gemfile
+++ b/counseling/Gemfile
@@ -26,7 +26,7 @@ gem "jbuilder"
 gem "bootstrap", "~> 5.0"
 gem "bootstrap_form", "~> 5.4"
 # Use Active Model has_secure_password [https://guides.rubyonrails.org/active_model_basics.html#securepassword]
-# gem "bcrypt", "~> 3.1.7"
+gem "bcrypt", "~> 3.1.7"
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem "tzinfo-data", platforms: %i[ windows jruby ]
